2004-04-02  Jorn Baayen  <jbaayen@gnome.org>

	* TODO:
	* configure.in:
	* libmuine/Makefile.am:
	R libmuine/gtk-glue.c:
	R libmuine/gtk-glue.h:
	* src/NotificationAreaIcon.cs:
	* src/PlaylistWindow.cs:

	Remove workarounds for Gtk# bugs that were fixed in Gtk# 0.18.
	We depend on 0.18 now.

2004-03-31  Edd Dumbill  <edd@usefulinc.com>

	* libmuine/db.c: (db_unpack_string), (db_unpack_int),
	(db_unpack_pixbuf):

	Compile fix.

2004-03-30  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	"part of the best damn Docklet code this side of Tahiti"

2004-03-23  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>

	* configure.in: Added pt_BR to ALL_LINGUAS.

2004-03-16  Iñaki Larrañaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" to ALL_LINGUAS.

2004-03-15  Changwoo Ryu  <cwryu@debian.org>

	* configure.in : Added "ko" to ALL_LINGUAS.

2004-03-14  Jorn Baayen  <jbaayen@gnome.org>

	* Makefile.am:
	* data/Makefile.am:
	* src/Makefile.am:

	Clean out more files on distclean and clean.

2004-03-14  Jorn Baayen  <jbaayen@gnome.org>

	* src/NotificationAreaIcon.cs:

	Middle-click on tray icon toggles window visibility.

2004-03-14  Jorn Baayen  <jbaayen@gnome.org>

	* data/glade/PlaylistWindow.glade:

	Remove accels from Play buttons, fixing #137106.
	
	* src/Muine.cs:
	* src/PlaylistWindow.cs:

	Clicking the WM close button hides the window.

2004-03-12  Lee Willis  <lee@leewillis.co.uk>
            Jorn Baayen  <jbaayen@gnome.org>

	* libmuine/Makefile.am:
	* libmuine/mm-keys.c: (mmkeys_get_type), (mmkeys_class_init),
	(mmkeys_finalize), (mmkeys_init), (mmkeys_new), (grab_mmkey),
	(filter_mmkeys):
	* libmuine/mm-keys.h:
	* src/Makefile.am:
	* src/MmKeys.cs:
	* src/PlaylistWindow.cs:

	Grab multimedia keys globally.

2004-03-10  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added Norwegian to ALL_LINGUAS.

2004-03-07  Jorn Baayen  <jbaayen@gnome.org>

	* src/PlaylistWindow.cs:

	Fix prev button behaviour.
