@@ -1,5 +1,11 @@
 2004-04-02  Jorn Baayen  <jbaayen@gnome.org>
 
+	* libmuine/id3-vfs/mp3bitrate.c: (mpg123_parse_xing_header):
+
+	Port xing header parsing fixes from Rhythmbox.
+
+2004-04-02  Jorn Baayen  <jbaayen@gnome.org>
+
 	* TODO:
 	* configure.in:
 	* libmuine/Makefile.am:
